--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -29,7 +29,7 @@
      <rect>
       <x>0</x>
       <y>380</y>
-      <width>161</width>
+      <width>111</width>
       <height>161</height>
      </rect>
     </property>
@@ -74,7 +74,7 @@
    <widget class="QWidget" name="verticalLayoutWidget_2">
     <property name="geometry">
      <rect>
-      <x>170</x>
+      <x>120</x>
       <y>380</y>
       <width>161</width>
       <height>161</height>
@@ -123,7 +123,7 @@
      <rect>
       <x>0</x>
       <y>340</y>
-      <width>331</width>
+      <width>281</width>
       <height>41</height>
      </rect>
     </property>
@@ -173,7 +173,7 @@
    <widget class="QWidget" name="verticalLayoutWidget_3">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>290</x>
       <y>340</y>
       <width>161</width>
       <height>201</height>
@@ -184,6 +184,13 @@
       <widget class="QPushButton" name="randButton">
        <property name="text">
         <string>Randomize Angles</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="zeroingAngles">
+       <property name="text">
+        <string>Set Angles to Zero</string>
        </property>
       </widget>
      </item>
@@ -223,6 +230,16 @@
        </item>
       </widget>
      </item>
+     <item>
+      <widget class="QPushButton" name="TestButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string>Testbuttion</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
    <widget class="QLabel" name="displayMLabel">
@@ -238,6 +255,39 @@
      <string>TextLabel</string>
     </property>
    </widget>
+   <widget class="QWidget" name="verticalLayoutWidget_4">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>340</y>
+      <width>161</width>
+      <height>201</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_4">
+     <item>
+      <widget class="QLineEdit" name="numberOfIter">
+       <property name="placeholderText">
+        <string>Number of iterations</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="testInit">
+       <property name="text">
+        <string>Test Init</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="OpenFile">
+       <property name="text">
+        <string>Open Results File</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -245,7 +295,7 @@
      <x>0</x>
      <y>0</y>
      <width>977</width>
-     <height>22</height>
+     <height>23</height>
     </rect>
    </property>
   </widget>
